(fix) popup awkwardly goes out of screen
very bandaid fix, but it serves its purpose

--- a/src/app/components/reusable/shopping-cart/shopping-cart.css
+++ b/src/app/components/reusable/shopping-cart/shopping-cart.css
@@ -1,9 +1,8 @@
 .cart-icon{
   width: 35px;
   height: 35px;
-  margin-left: 15px;
+  margin-right: 15px;
   cursor: pointer;
-
 }
 
 .cart-icon:hover{
